# kohi

./: .env  CMakeLists.txt
engine/: CMakeLists.txt
engine/platform/: platform.h  platform_apple.mm  platform_win32.cpp
engine/src/: defines.h  entry.h  game_types.h
engine/src/core/: application.cpp  application.h  asserts.h  logger.cpp  logger.h
testbed/: CMakeLists.txt
testbed/src/: entry.cpp  game.cpp  game.h
